--- a/ASW-Trab3/war/ASW_Trab3.html
+++ b/ASW-Trab3/war/ASW_Trab3.html
@@ -21,8 +21,8 @@
 
     <h1 class="bottomBorder paddBottom">WWWordz</h1>
     <div>
-        <h2>Login</h2>
-        <div id="login" align="center"></div>
+    	<div id="user_info" align="left"></div>
+        <div id="deck_panel" align="center"></div>
     </div>
 </body>
 
